--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>AKS Demo App</h1>
+        <h1>Version 1.0</h1>
         <hr>
         <p>Deployed via Azure DevOps</p>
         <p>Current Namespace: ##NAMESPACE## </p>
